feat!: update CSS and fix codesmells after migration to Polarion 2512 (#682)
Refs: #649