@@ -9,6 +9,7 @@ import org.jetbrains.annotations.VisibleForTesting;
 
 import java.io.InputStream;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.util.stream.Stream;
 
@@ -28,8 +29,8 @@ public class CustomResourceUrlResolver implements IUrlResolver {
 
     public InputStream resolve(@NotNull String urlStr) {
         try {
-            URL url = new URL(normalizeUrl(ensureAbsoluteUrl(urlStr)));
-            return resolveImpl(url);
+            URI uri = URI.create(normalizeUrl(ensureAbsoluteUrl(urlStr)));
+            return resolveImpl(uri.toURL());
         } catch (Exception e) {
             Logger.getLogger(this).warn("Failed to load resource: " + urlStr, e);
         }
